# ph

./: .gitignore  README.md  docker-compose.yml  start-dev.sh  test-mcp.sh
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/core/config/: __init__.py  settings.py
backend/core/models/: database.py
backend/core/schemas/: base.py
backend/core/utils/: neo4j_client.py  redis_client.py
backend/services/agent/: __init__.py  base.py  coordinator.py
backend/services/agent/agents/: academic_advisor.py
backend/services/api/: main.py
backend/services/api/routes/: __init__.py  chat.py
backend/services/mcp/: __init__.py  base.py  server.py
backend/services/mcp/patterns/: __init__.py  academic_guidance.py  academic_progress.py  career_guidance.py
backend/services/mcp/resources/: courses.py  student_data.py
backend/services/mcp/tools/: academic_tools.py  basic_tools.py  planning_tools.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/src/app/: page.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx
frontend/src/services/: api.ts
frontend/src/store/: chat-store.ts
infrastructure/local/: docker-compose.yml
